--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Micro:bit WASD Kontroler (Jednostavno)</title>
+    <title>Micro:bit Kontroler</title>
     <style>
       :root { color-scheme: dark light; }
       body {
@@ -230,3 +230,4 @@
     </script>
   </body>
 </html>
+
